; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/utils/extr_oggplayer.c_StopOgg.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Genesis-Plus-GX/PVGenesis/Genesis/GenesisCore/genplusgx_source/gx/utils/extr_oggplayer.c_StopOgg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ogg_thread_running = common dso_local global i64 0, align 8
@h_oggplayer = common dso_local global i64 0, align 8
@LWP_THREAD_NULL = common dso_local global i64 0, align 8
@oggplayer_queue = common dso_local global i64 0, align 8
@LWP_TQUEUE_NULL = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @StopOgg() #0 {
  %1 = call i32 @ASND_StopVoice(i32 0)
  store i64 0, i64* @ogg_thread_running, align 8
  %2 = load i64, i64* @h_oggplayer, align 8
  %3 = load i64, i64* @LWP_THREAD_NULL, align 8
  %4 = icmp ne i64 %2, %3
  br i1 %4, label %5, label %16

5:                                                ; preds = %0
  %6 = load i64, i64* @oggplayer_queue, align 8
  %7 = load i64, i64* @LWP_TQUEUE_NULL, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %5
  %10 = load i64, i64* @oggplayer_queue, align 8
  %11 = call i32 @LWP_ThreadSignal(i64 %10)
  br label %12

12:                                               ; preds = %9, %5
  %13 = load i64, i64* @h_oggplayer, align 8
  %14 = call i32 @LWP_JoinThread(i64 %13, i32* null)
  %15 = load i64, i64* @LWP_THREAD_NULL, align 8
  store i64 %15, i64* @h_oggplayer, align 8
  br label %16

16:                                               ; preds = %12, %0
  %17 = load i64, i64* @oggplayer_queue, align 8
  %18 = load i64, i64* @LWP_TQUEUE_NULL, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %24

20:                                               ; preds = %16
  %21 = load i64, i64* @oggplayer_queue, align 8
  %22 = call i32 @LWP_CloseQueue(i64 %21)
  %23 = load i64, i64* @LWP_TQUEUE_NULL, align 8
  store i64 %23, i64* @oggplayer_queue, align 8
  br label %24

24:                                               ; preds = %20, %16
  ret void
}

declare dso_local i32 @ASND_StopVoice(i32) #1

declare dso_local i32 @LWP_ThreadSignal(i64) #1

declare dso_local i32 @LWP_JoinThread(i64, i32*) #1

declare dso_local i32 @LWP_CloseQueue(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
